working as intended, moving towards more specific implementation

--- a/Cyble/Cyble/src/main/res/menu/device_scan.xml
+++ b/Cyble/Cyble/src/main/res/menu/device_scan.xml
@@ -3,5 +3,9 @@
     <item android:id="@+id/scan_button"
           android:title="@string/start_scan"
           android:showAsAction="always" />
+    <item android:id="@+id/scanning_indicator"
+          android:title="@string/scanning"
+          android:showAsAction="always" />
+
 
 </menu>
