Sweet god almighty, it works.

--- a/Cyble/Cyble/src/main/res/menu/gatt_services.xml
+++ b/Cyble/Cyble/src/main/res/menu/gatt_services.xml
@@ -11,4 +11,8 @@
           android:title="@string/menu_disconnect"
           android:orderInCategory="101"
           android:showAsAction="ifRoom|withText"/>
+    <item android:id="@+id/subscribe"
+          android:title="@string/subscribe"
+          android:orderInCategory="101"
+          android:showAsAction="ifRoom|withText"/>
 </menu>
